# schoolflix_backend

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  rav.yaml
src/: main.py
