[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.118.0",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F401"]
extend-safe-fixes = ["F601"]
extend-unsafe-fixes = ["UP034"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

exclude = ['.venv']


[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "rav>=0.1.1",
    "ruff>=0.13.2",
]
